# curso-django-2023-11

clase_01/: README.md  pyproject.toml
clase_01/mysite/mysite/: settings.py
