[tool.poetry]
name = "clase-01"
version = "0.1.0"
description = "Ejemplo poetry"
authors = ["Ramses Martinez <ramses.mtz96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
